# PYProject

./: .gitattributes  GameOptions.py  Question.py  README.md  TimeGame.py  database.db  init_db.py  main.py  pyproject.toml  registration.py  test-db.py  test.py  test_gui.py
DB/: GameResult.py
DB/DAO/: gameResultDao.py  userDao.py
DB/model/: GameResult.py  User.py
GUI/: AuthorizationWindow.py  AuthorizePlayersWindow.py  GameTypeMenuWindow.py  MainMenuWindow.py  MistakeAmountOfPlayersWindow.py  MistakeGame.py  ResultsWindow.py  SettingsWindow.py  TimeGame.py  main.py  startMenu.py
auth/: registration.py
game/: QuestionOrganizer.py
src/DB/: database.py
src/DB/DAO/: gameResultDao.py  userDao.py
src/DB/model/: GameResult.py  User.py
src/GUI/: AuthorizationWindow.py  AuthorizePlayersWindow.py  GameTypeMenuWindow.py  MainMenuWindow.py  MistakeAmountOfPlayersWindow.py  MistakeGame.py  ResultsWindow.py  SettingsWindow.py  TimeGame.py  main.py
src/auth/: Person.py  registration.py
src/game/: QuestionOrganizer.py
src/utils/: ProjectUtil.py  Properties.py  Question.py  QuestionsLoader.py
src/utils/data/: properties.json  questions.json
utils/: ProjectUtil.py  Properties.py  QuestionsLoader.py  properties.json
utils/data/: properties.json  questions.json
